--- a/zen-training/layouts/app/src/main/res/values/strings.xml
+++ b/zen-training/layouts/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Layouts</string>
+
+    <string-array name="marital_state_list">
+        <item>Single</item>
+        <item>Married</item>
+        <item>Divorced</item>
+    </string-array>
+
+    <string-array name="organizations_list">
+        <item>Org 1</item>
+        <item>Org 2</item>
+        <item>Org 3</item>
+    </string-array>
 </resources>
